# flexiv_rdk

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  llms.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: cmake.yml
.github/workflows/shared_steps/: action.yml
cmake/: FlexivInstallLibrary.cmake  config.h.in  flexiv_rdk-config.cmake.in  qnx_toolchain_aarch64.cmake  qnx_toolchain_x86_64.cmake
doc/: Doxyfile.in
example/: CMakeLists.txt  RT_cartesian_impedance_control.cpp  RT_cartesian_motion_control.cpp  RT_cartesian_motion_force_control.cpp  RT_cartesian_pure_motion_control.cpp  RT_joint_floating.cpp  RT_joint_impedance_control.cpp  RT_joint_position_control.cpp  auto_recovery.cpp  basics10_logging_behavior.cpp  basics1_display_robot_states.cpp  basics2_clear_fault.cpp  basics3_primitive_execution.cpp  basics4_plan_execution.cpp  basics5_zero_force_torque_sensors.cpp  basics6_gripper_control.cpp  basics7_auto_recovery.cpp  basics8_update_robot_tool.cpp  basics9_global_variables.cpp  basics9_logging_behavior.cpp  cartesian_impedance_control.cpp  cartesian_impedance_control_rt.cpp  clear_fault.cpp  contact_control.cpp  display_robot_states.cpp  floating_with_soft_limits.cpp  gripper_control.cpp  intermediate1_realtime_joint_position_control.cpp  intermediate2_realtime_joint_impedance_control.cpp  intermediate2_realtime_joint_torque_control.cpp  intermediate3_realtime_joint_floating.cpp  intermediate3_realtime_joint_torque_control.cpp  intermediate4_realtime_cartesian_pure_motion_control.cpp  intermediate4_realtime_joint_floating.cpp  intermediate5_realtime_cartesian_motion_force_control.cpp  intermediate5_realtime_cartesian_pure_motion_control.cpp  intermediate6_realtime_cartesian_motion_force_control.cpp  intermediate6_robot_dynamics.cpp  intermediate7_robot_dynamics.cpp  intermediate7_teach_by_demonstration.cpp  (+8 more)
example/tool/: CMakeLists.txt  install_dependencies.sh  keyboad_move_tcp.cpp  keyboard_move_tcp.cpp
example/windows/: windows.sln
example/windows/auto_recovery/: auto_recovery.vcxproj  auto_recovery.vcxproj.filters
example/windows/clear_fault/: clear_fault.vcxproj  clear_fault.vcxproj.filters
example/windows/display_robot_states/: display_robot_states.vcxproj  display_robot_states.vcxproj.filters
example/windows/gripper_control/: gripper_control.vcxproj  gripper_control.vcxproj.filters
example/windows/plan_execution/: plan_execution.vcxproj  plan_execution.vcxproj.filters
example/windows/primitive_execution/: primitive_execution.vcxproj  primitive_execution.vcxproj.filters
example_py/: AGENT_REFERENCE_primitives_only.py  NRT_cartesian_impedance_control.py  NRT_cartesian_motion_control.py  NRT_cartesian_motion_force_control.py  NRT_cartesian_pure_motion_control.py  NRT_joint_position_control.py  auto_recovery.py  basics1_display_robot_states.py  basics2_clear_fault.py  basics3_primitive_execution.py  basics4_plan_execution.py  basics5_zero_force_torque_sensors.py  basics6_gripper_control.py  basics7_auto_recovery.py  basics8_update_robot_tool.py  basics9_global_variables.py  clear_fault.py  contact_control.py  display_robot_states.py  gripper_control.py  intermediate1_non_realtime_joint_position_control.py  intermediate2_non_realtime_cartesian_pure_motion_control.py  intermediate2_non_realtime_joint_impedance_control.py  intermediate3_non_realtime_cartesian_motion_force_control.py  intermediate3_non_realtime_cartesian_pure_motion_control.py  intermediate4_non_realtime_cartesian_motion_force_control.py  intermediate4_teach_by_demonstration.py  intermediate5_robot_dynamics.py  intermediate6_non_realtime_cartesian_vel_trajectory.py  nrt_cartesian_impedance_control.py  nrt_joint_position_control.py  plan_execution.py  primitive_execution.py  teach_by_demonstration.py  utility.py
include/: Log.hpp  Mode.hpp  Model.hpp  Robot.hpp  RobotStates.hpp  Visualization.hpp
include/flexiv/: Data.hpp  Device.hpp  Exception.hpp  FileIO.hpp  Gripper.hpp  Log.hpp  Mode.hpp  Model.hpp  Robot.hpp  Scheduler.hpp  StatesData.hpp  Tool.hpp  Utility.hpp  Visualization.hpp  data.h  device.h  file_io.h  gripper.h  log.h  mode.h  model.h  robot.h  scheduler.h  tool.h  utility.h
include/flexiv/rdk/: data.hpp  device.hpp  file_io.hpp  gripper.hpp  maintenance.hpp  mode.hpp  model.hpp  robot.hpp  safety.hpp  scheduler.hpp  tool.hpp  utility.hpp  work_coord.hpp
lib/: FlexivRdk.win_amd64.lib  FlexivRdk.x86_64-windows.lib  dummy.cpp  flexiv_rdk.win-amd64.lib  flexiv_rdk.win_amd64.lib  flexiv_rdk.win_amd64.lib.sha256  libflexiv_rdk.aarch64-linux-gnu.a.sha256  libflexiv_rdk.aarch64-linux-gnu.ros2-jazzy.a.sha256  libflexiv_rdk.aarch64-qnx.a.sha256  libflexiv_rdk.arm64-darwin.a.sha256  libflexiv_rdk.x86_64-linux-gnu.a.sha256  libflexiv_rdk.x86_64-linux-gnu.ros2-jazzy.a.sha256  libflexiv_rdk.x86_64-qnx.a.sha256
lib/ref_hash/: libflexiv_rdk.aarch64-linux-gnu.a.sha256  libflexiv_rdk.x86_64-linux-gnu.ros2-jazzy.a.sha256
lib_py/: flexivrdk.cp310-win_amd64.pyd  flexivrdk.cp312-win_amd64.pyd  flexivrdk.cp38-win_amd64.pyd
python/: install.sh  pylibflexiv.cpp  read_state_and_home.py
resources/: flexiv_Rizon10_kinematics.urdf  flexiv_Rizon10s_kinematics.urdf  flexiv_Rizon4M_kinematics.urdf  flexiv_Rizon4R_kinematics.urdf  flexiv_Rizon4_kinematics.urdf  flexiv_Rizon4s_kinematics.urdf  flexiv_rizon10_kinematics.urdf  flexiv_rizon10s_kinematics.urdf  flexiv_rizon4_kinematics.urdf  flexiv_rizon4s_kinematics.urdf  scene.urdf
resources/meshes/collision/: link1.stl  link5.stl  link7.stl
resources/meshes/visual/: link0.stl  link4.stl  link6.stl
spec/: flexiv_rizon4_kinematics.urdf  scene.urdf
spec/meshes/collision/: link0.stl
spec/meshes/visual/: link1.stl  link2.stl  link3.stl  (+2 more)
test/: CMakeLists.txt  test_data_integrity.cpp  test_dynamic_engine.cpp  test_dynamics_engine.cpp  test_dynamics_with_tool.cpp  test_endurance.cpp  test_log.cpp  test_loop_latency.cpp  test_repeated_instantiation.cpp  test_scheduler.cpp  test_set_tool.cpp  test_timeliness_monitor.cpp
urdf/: flexiv_rizon4_kinematics.urdf
(+74 files in other folders)
